--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,56 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+*{
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    background-color:beige;
+    }
+    .App{
+        display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height:100vh
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.container{
+    box-shadow: 0px 0px 12px #ccc;
+    border-radius: 8px;
+    padding: 3rem;
 }
+input{
+    width:100%;
+    font-size: 1.2rem;
+    padding: 15px 4px;
+    margin: 8px 0;
+    border-radius: 8px;
+}
+.btn{
+    display: block;
+    width:100%;
+    font-size: 1.2rem;
+    margin:8px 0;
+    background-color: #0077EE;
+    color:#fff;
+    border:1px dotted #333;
+    border-radius: 8px;
+   cursor: pointer; 
+}
+.btn-outline{
+    background-color: #fff;
+    color:#A6BCDA;
+}
+.center{
+    text-align: center;
+    margin:24px 0; 
+}
+p {
+    margin: 10px 0;
+  }
+   
+  .img-container {
+    text-align: center;
+  }
+   
+  .img-container img {
+    height: 200px;
+  }
